--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -1,5 +1,4 @@
 .container {
-  border: 5px solid blue;
   padding: 5px;
   display: flex;
   align-items: center;
@@ -12,7 +11,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border: 10px solid black;
+  border: 5px solid black;
+  border-radius: 5px;
   padding: 10px;
   min-width: 500px;
   max-width: 750px;
@@ -42,7 +42,7 @@ button {
   background-color: #58668b;
 }
 button:hover {
-    border-color: blue;
+    border-color: #55ddaa;
 }
 @media all and (max-width: 30em) {
   button {
