--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -2,7 +2,7 @@
   padding: 5px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   flex-direction: row;
 }
 @media (max-width: 1000px) {
@@ -37,6 +37,8 @@ input {
 }
 .output-container {
     margin-left: 20px;
+    background-color: white;
+    padding: 20px;
 }
 button {
   display: inline-block;
