--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -5,7 +5,7 @@
   justify-content: space-around;
   flex-direction: row;
 }
-@media (max-width: 1000px) {
+@media (max-width: 1200px) {
     .container {
         flex-direction: column;
     }
@@ -39,6 +39,7 @@ input {
     margin-left: 20px;
     background-color: white;
     padding: 20px;
+    width: 500px;
 }
 button {
   display: inline-block;
