--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -46,6 +46,7 @@ input {
     background-color: white;
     padding: 20px;
     width: 500px;
+    margin-bottom: 50px;
 }
 button {
   display: inline-block;
